--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "leovaldi/cedula-profesional",
-    "description": "Paquete para consultar cédulas profesionales de la SEP",
+    "description": "Consulta de cédulas profesionales de la SEP",
     "type": "library",
     "license": "MIT",
     "autoload": {
@@ -10,30 +10,10 @@
     },
     "authors": [
         {
-            "name": "LeoValdi",
+            "name": "Leo Valdi",
             "email": "mail@leovaldi.com"
         }
     ],
-    "require": {
-        "php": "^7.4|^8.0",
-        "ext-curl": "*",
-        "ext-json": "*",
-        "illuminate/support": "^8.0|^9.0|^10.0",
-        "illuminate/contracts": "^8.0|^9.0|^10.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "orchestra/testbench": "^6.0|^7.0|^8.0"
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "CedulaProfesional\\CedulaProfesionalServiceProvider"
-            ],
-            "aliases": {
-                "CedulaProfesional": "CedulaProfesional\\Facades\\CedulaProfesional"
-            }
-        }
-    },
-    "minimum-stability": "stable"
-} 
+    "minimum-stability": "stable",
+    "require": {}
+}
